--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
   <title>Calculator</title>
 </head>
 <body>
+  <header>
+    <h1>Calculator</h1>
+  </header>
+  <div id = "mainbody1">
+    <div id = "mainbody1-outline">
+      <div id = "mainbody1-screen">123456789</div>
+
+
+      <button id = "mainbody1-number">7</button>
+      <button id = "mainbody1-number">8</button>
+      <button id = "mainbody1-number">9</button>
+      <button id = "mainbody1-number">+</button>
+      <br>
+      <button id = "mainbody1-number">4</button>
+      <button id = "mainbody1-number">5</button>
+      <button id = "mainbody1-number">6</button>
+      <button id = "mainbody1-number">-</button>
+      <br>
+      <button id = "mainbody1-number">1</button>
+      <button id = "mainbody1-number">2</button>
+      <button id = "mainbody1-number">3</button>
+      <button id = "mainbody1-number">×</button>
+      <br>
+      <button id = "mainbody1-number">1</button>
+      <button id = "mainbody1-number">2</button>
+      <button id = "mainbody1-number">3</button>
+      <button id = "mainbody1-number">÷</button>
+      <br>
+      <button id = "mainbody1-number">0</button>
+      <button id = "mainbody1-operator">=</button>
+    </div>
+    
+  </div>
   
 
   <script src="scripts/main.js"></script>
