--- a/index.html
+++ b/index.html
@@ -13,36 +13,38 @@
   </header>
   <div id = "mainbody1">
     <div id = "mainbody1-outline">
-      <div id = "mainbody1-screen">123456789</div>
+
+      <div id = "mainbody1-screen">0</div>
 
 
-      <button id = "mainbody1-number">7</button>
-      <button id = "mainbody1-number">8</button>
-      <button id = "mainbody1-number">9</button>
-      <button id = "mainbody1-number">+</button>
+      <button class = "mainbody1-number" id = "M">M</button>
+      <button class = "mainbody1-number" id = "M+">M+</button>
+      <button class = "mainbody1-number" id = "DEL">DEL</button>
+      <button class = "mainbody1-number" id = "+">+</button>
       <br>
-      <button id = "mainbody1-number">4</button>
-      <button id = "mainbody1-number">5</button>
-      <button id = "mainbody1-number">6</button>
-      <button id = "mainbody1-number">-</button>
+      <button class = "mainbody1-number" id = "7">7</button>
+      <button class = "mainbody1-number" id = "8">8</button>
+      <button class = "mainbody1-number" id = "9">9</button>
+      <button class = "mainbody1-number" id = "-">-</button>
       <br>
-      <button id = "mainbody1-number">1</button>
-      <button id = "mainbody1-number">2</button>
-      <button id = "mainbody1-number">3</button>
-      <button id = "mainbody1-number">×</button>
+      <button class = "mainbody1-number" id = "4">4</button>
+      <button class = "mainbody1-number" id = "5">5</button>
+      <button class = "mainbody1-number" id = "6">6</button>
+      <button class = "mainbody1-number" id = "x">×</button>
       <br>
-      <button id = "mainbody1-number">1</button>
-      <button id = "mainbody1-number">2</button>
-      <button id = "mainbody1-number">3</button>
-      <button id = "mainbody1-number">÷</button>
+      <button class = "mainbody1-number" id = "1">1</button>
+      <button class = "mainbody1-number" id = "2">2</button>
+      <button class = "mainbody1-number" id = "3">3</button>
+      <button class = "mainbody1-number" id = "/">÷</button>
       <br>
-      <button id = "mainbody1-number">0</button>
-      <button id = "mainbody1-operator">=</button>
-    </div>
+      <button class = "mainbody1-number" id = "0">0</button>
+      <button class = "mainbody1-number" id = ".">.</button>
+      <button class = "mainbody1-number" id = "CLR">CLR</button>
+      <button class = "mainbody1-number" id = "=">=</button>
     
+    </div>
   </div>
   
-
   <script src="scripts/main.js"></script>
 </body>
 </html>
