--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
       <button class = "mainbody1-number" id = "M">M</button>
       <button class = "mainbody1-number" id = "M+">M+</button>
       <button class = "mainbody1-number" id = "DEL">DEL</button>
-      <button class = "mainbody1-number" id = "+">+</button>
+      <button onclick = "calculateDisplay('+')" class = "mainbody1-number" id = "+">+</button>
       <br>
-      <button class = "mainbody1-number" id = "7">7</button>
-      <button class = "mainbody1-number" id = "8">8</button>
-      <button class = "mainbody1-number" id = "9">9</button>
-      <button class = "mainbody1-number" id = "-">-</button>
+      <button onclick = "input(7)" class = "mainbody1-number" id = "7">7</button>
+      <button onclick = "input(8)" class = "mainbody1-number" id = "8">8</button>
+      <button onclick = "input(9)" class = "mainbody1-number" id = "9">9</button>
+      <button onclick = "calculateDisplay('-')" class = "mainbody1-number" id = "-">-</button>
       <br>
-      <button class = "mainbody1-number" id = "4">4</button>
-      <button class = "mainbody1-number" id = "5">5</button>
-      <button class = "mainbody1-number" id = "6">6</button>
-      <button class = "mainbody1-number" id = "x">×</button>
+      <button onclick = "input(4)" class = "mainbody1-number" id = "4">4</button>
+      <button onclick = "input(5)" class = "mainbody1-number" id = "5">5</button>
+      <button onclick = "input(6)" class = "mainbody1-number" id = "6">6</button>
+      <button onclick = "calculateDisplay('*')" class = "mainbody1-number" id = "x">×</button>
       <br>
-      <button class = "mainbody1-number" id = "1">1</button>
-      <button class = "mainbody1-number" id = "2">2</button>
-      <button class = "mainbody1-number" id = "3">3</button>
-      <button class = "mainbody1-number" id = "/">÷</button>
+      <button onclick = "input(1)" class = "mainbody1-number" id = "1">1</button>
+      <button onclick = "input(2)" class = "mainbody1-number" id = "2">2</button>
+      <button onclick = "input(3)" class = "mainbody1-number" id = "3">3</button>
+      <button onclick = "calculateDisplay('/')" class = "mainbody1-number" id = "/">÷</button>
       <br>
-      <button class = "mainbody1-number" id = "0">0</button>
-      <button class = "mainbody1-number" id = ".">.</button>
-      <button class = "mainbody1-number" id = "CLR">CLR</button>
-      <button class = "mainbody1-number" id = "=">=</button>
+      <button onclick = "input(0)" class = "mainbody1-number" id = "0">0</button>
+      <button class = "mainbody1-number">.</button>
+      <button onclick = "clearBoard()" class = "mainbody1-number">CLR</button>
+      <button onclick = "calculateDisplay()" class = "mainbody1-number" id = "=">=</button>
     
     </div>
   </div>
