--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <button onclick = "input(0)" class = "mainbody1-number" id = "0">0</button>
       <button class = "mainbody1-number">.</button>
       <button onclick = "clearBoard()" class = "mainbody1-number">CLR</button>
-      <button onclick = "calculateDisplay()" class = "mainbody1-number" id = "=">=</button>
+      <button onclick = "calculateDisplay('=')" class = "mainbody1-number" id = "=">=</button>
     
     </div>
   </div>
